# crud-bench

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  dev.sh  run.sh  schema.surql
.cargo/: config.toml
.github/workflows/: bench-surrealdb.yml  benchmark.yml  ci.yml  custom.yml  manual.yml  nightly.yml
compare/: index.html
config/: batches.json  bench.toml  cache.toml  ci.toml  scan.json  scans-surrealdb.json  setup-surrealdb.json  test.toml  value-surrealdb.json  value.json
results/runs/: compare-memory.txt  v2-memory.txt  v2-tikv.txt  v3-memory.txt  v3-tikv.txt
scripts/: compare-multi.sh  compare.py  compare.sh  init_aws_sdk.sh  tikv.sh
src/: arangodb.rs  benchmark.rs  chart.rs  clouddb.rs  config.rs  database.rs  dialect.rs  docker.rs  dragonfly.rs  dry.rs  echodb.rs  engine.rs  fjall.rs  keydb.rs  keyprovider.rs  lmdb.rs  lsm.rs  main.rs  map.rs  mariadb.rs  mdbx.rs  memodb.rs  memory.rs  mongodb.rs  mysql.rs  neo4j.rs  postgres.rs  profiling.rs  redb.rs  redis.rs  result.rs  rocksdb.rs  rocksdb_plain.rs  scylladb.rs  slatedb.rs  speedb.rs  sqlite.rs  storage.rs  surrealdb.rs  surrealdb2.rs  (+9 more)
src/threadpool/: builder.rs  global.rs  handle.rs  mod.rs  sentry.rs  task.rs
src/util/: data.rs  mod.rs  redis_batch.rs  sql.rs
template/: default.json  nested.json
