[package]
name = "crud-bench"
edition = "2024"
version = "0.1.0"
license = "Apache-2.0"
readme = "README.md"
rust-version = "1.89.0"

[features]
default = [
    "arangodb",
    "dragonfly",
    "fjall",
    "keydb",
    "mdbx",
    "lmdb",
    "mongodb",
    "mysql",
    "neo4j",
    "postgres",
    "redb",
    "redis",
    "rocksdb",
    "scylladb",
    "sqlite",
    "surrealdb",
    "surrealkv",
    "surrealmx",
]
arangodb = ["dep:arangors"]
dragonfly = ["dep:redis"]
keydb = ["dep:redis"]
fjall = ["dep:fjall"]
mdbx = ["dep:libmdbx"]
lmdb = ["dep:heed"]
mongodb = ["dep:mongodb"]
mysql = ["dep:mysql_async"]
neo4j = ["dep:neo4rs"]
postgres = ["dep:tokio-postgres"]
redb = ["dep:redb"]
redis = ["dep:redis"]
rocksdb = ["dep:rocksdb"]
scylladb = ["dep:scylla"]
sqlite = ["dep:tokio-rusqlite"]
surrealdb = [
    "dep:surrealdb",
    "surrealdb/kv-mem",
    "surrealdb/kv-rocksdb",
    "surrealdb/kv-surrealkv",
    "surrealdb/protocol-http",
    "surrealdb/protocol-ws",
    "surrealdb/rustls",
]
surrealkv = ["dep:surrealkv"]
surrealmx = ["dep:surrealmx"]

[profile.release]
lto = true
strip = "debuginfo"
opt-level = 3
debug = false
panic = 'abort'
codegen-units = 1
overflow-checks = false

[dependencies]
affinitypool = "0.3.1"
anyhow = "1.0.99"
arangors = { version = "0.6.0", optional = true }
bincode = { version = "2.0.1", features = ["serde"] }
bytesize = "2.0.1"
comfy-table = "7.2.0"
chrono = "0.4.41"
clap = { version = "4.5.47", features = ["derive", "string", "env", "color"] }
csv = "1.3.1"
dashmap = "6.1.0"
env_logger = "0.11.8"
fjall = { version = "2.11.2", optional = true }
flatten-json-object = "0.6.1"
futures = "0.3.31"
hdrhistogram = "7.5.4"
heed = { version = "0.22.0", optional = true }
libmdbx = { version = "0.6.1", optional = true }
log = "0.4.27"
mimalloc = "0.1.48"
mongodb = { version = "3.2.5", optional = true }
mysql_async = { version = "0.36.1", default-features = false, features = [
    "bigdecimal",
    "binlog",
    "derive",
    "frunk",
    "rust_decimal",
    "time",
], optional = true }
neo4rs = { version = "0.8.0", optional = true }
num_cpus = "1.17.0"
pprof = { version = "0.15.0", features = ["flamegraph", "prost-codec"] }
rand = { version = "0.9.2", features = ["small_rng"] }
redb = { version = "3.0.1", optional = true }
redis = { version = "0.32.5", features = ["tokio-comp"], optional = true }
rocksdb = { version = "0.24.0", features = ["lz4", "snappy"], optional = true }
scylla = { version = "1.3.1", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serial_test = "3.2.0"
surrealdb = { git = "https://github.com/surrealdb/surrealdb", default-features = false, optional = true }
surrealkv = { version = "0.13.0", optional = true }
surrealmx = { version = "0.10.0", optional = true }
sysinfo = { version = "0.37.0", features = ["serde"] }
tokio = { version = "1.47.1", features = ["macros", "time", "rt-multi-thread"] }
tokio-postgres = { version = "0.7.13", optional = true, features = [
    "with-serde_json-1",
    "with-uuid-1",
] }
tokio-rusqlite = { version = "0.6.0", optional = true, features = ["bundled"] }
twox-hash = "2.1.1"
uuid = { version = "1.18.1", features = ["v4"] }
