[package]
name = "crud-bench"
edition = "2024"
version = "0.1.0"
license = "Apache-2.0"
readme = "README.md"
rust-version = "1.89.0"

[features]
default = [
    "arangodb",
    "dragonfly",
    "fjall",
    "keydb",
    "mdbx",
    "lmdb",
    "mariadb",
    "mongodb",
    "mysql",
    "neo4j",
    "postgres",
    "redb",
    "redis",
    "rocksdb",
    "scylladb",
    "sqlite",
    "surrealdb",
    "surrealkv",
    "surrealmx",
]
arangodb = ["dep:arangors"]
dragonfly = ["dep:redis"]
keydb = ["dep:redis"]
fjall = ["dep:fjall"]
mdbx = ["dep:libmdbx"]
lmdb = ["dep:heed"]
mariadb = ["dep:mysql_async"]
mongodb = ["dep:mongodb"]
mysql = ["dep:mysql_async"]
neo4j = ["dep:neo4rs"]
postgres = ["dep:tokio-postgres"]
redb = ["dep:redb"]
redis = ["dep:redis"]
rocksdb = ["dep:rocksdb"]
scylladb = ["dep:scylla"]
sqlite = ["dep:tokio-rusqlite"]
surrealdb = [
    "dep:surrealdb",
    "dep:surrealdb-types",
    "surrealdb/kv-mem",
    "surrealdb/kv-rocksdb",
    "surrealdb/kv-surrealkv",
    "surrealdb/protocol-http",
    "surrealdb/protocol-ws",
    "surrealdb/rustls",
]
surrealkv = ["dep:surrealkv"]
surrealmx = ["dep:surrealmx"]

[profile.release]
lto = true
strip = "debuginfo"
opt-level = 3
debug = false
panic = 'abort'
codegen-units = 1
overflow-checks = false

[dependencies]
affinitypool = "0.4.0"
anyhow = "1.0.100"
arangors = { version = "0.6.0", optional = true }
bincode = { version = "2.0.1", features = ["serde"] }
bytesize = "2.3.1"
comfy-table = "7.2.1"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive", "string", "env", "color"] }
csv = "1.4.0"
dashmap = "6.1.0"
env_logger = "0.11.8"
fjall = { version = "2.11.2", optional = true }
flatten-json-object = "0.6.1"
futures = "0.3.31"
hdrhistogram = "7.5.4"
heed = { version = "0.22.0", optional = true }
libmdbx = { version = "0.6.4", optional = true }
log = "0.4.28"
mimalloc = "0.1.48"
mongodb = { version = "3.4.1", optional = true }
mysql_async = { version = "0.36.1", default-features = false, features = [
    "bigdecimal",
    "binlog",
    "derive",
    "frunk",
    "rust_decimal",
    "time",
], optional = true }
neo4rs = { version = "0.8.0", optional = true }
num_cpus = "1.17.0"
pprof = { version = "0.15.0", features = ["flamegraph", "prost-codec"] }
rand = { version = "0.9.2", features = ["small_rng"] }
redb = { version = "3.1.0", optional = true }
redis = { version = "0.32.7", features = ["tokio-comp"], optional = true }
rocksdb = { version = "0.24.0-surreal.1", package = "surrealdb-rocksdb", features = ["lz4", "snappy"], optional = true }
scylla = { version = "1.4.1", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serial_test = "3.2.0"
surrealdb = { git = "https://github.com/surrealdb/surrealdb", branch = "arriqaaq/skv017", default-features = false, optional = true }
surrealdb-types = { version = "3.0.0-beta.1", default-features = false, optional = true }
surrealkv = { git = "https://github.com/surrealdb/surrealkv", branch = "main", optional = true }
surrealmx = { version = "0.15.0", optional = true }
sysinfo = { version = "0.37.2", features = ["serde"] }
tokio = { version = "1.48.0", features = ["macros", "time", "rt-multi-thread"] }
tokio-postgres = { version = "0.7.15", optional = true, features = [
    "with-serde_json-1",
    "with-uuid-1",
] }
tokio-rusqlite = { version = "0.7.0", optional = true, features = ["bundled"] }
twox-hash = "2.1.2"
uuid = { version = "1.18.1", features = ["v4"] }

[profile.profiling]
inherits = "release"  # start from the production settings
debug = true          # keep debug info so symbols show up in flamegraph
strip = "none"
